# spark-process-images

./: __main__.py  filters.py  pyproject.toml  requirements.txt  utils.py  visualize.py
drafts/: edge_detection.py  np_playground.py  simple.py
resources/input/: t1.tiff
